@@ -2,30 +2,35 @@ TO DO
 
 + before 4.0pre1:
 
+- gnu.regexp 1.1.4
+- roll linesChanged() into contentInserted()/contentRemoved()
+- if a buffer listener throws an exception, don't break down
+- CVS add SegmentBuffer.java
+- use improved buffer property code
 - read write lock hangs
 - optimize ContentManager.close()
 - v2p/p2v: implement from end backward scan
 - stupid rest visible hack in offset manager
-- CVS remove/add IntegerArray.java
-- CVS add ReadWriteLock.java
 - settings files: save to #foo#save# first, then rename to foo
 - switching from narrowed buffer, to one with caret at already zero might
   cause problems, since physFirstLine won't be updated?
 - inserting line after closed fold issues -- fix in OffsetManager
 - positions
 - new undo
-- narrowing
-- buffer properties
 - move away from Swing APIs in the core
 - respect collapseFolds buffer property when:
   - pasting
   - narrowing
   - anything else?
 - auto indent: do not indent on {{{
-- investigate nextLineRequested() -- replace with a buffer event.
 - recompile Firewall.jar before releasing
-- tip about smart case replace
+
++ pre2:
+
+- narrowing
+- investigate nextLineRequested() -- replace with a buffer event.
 - gutter scope bracket repaint problems
+- tip about smart case replace
 - geometry workaround from j
 - update macros for API changes
 - macro guide entry for Andre's Vertical Paste macro
@@ -36,9 +41,17 @@ TO DO
 - QuickNotepad XSL docs
 - write explicit folding tips
 - Alt-key sequences on OS X
+- include Kris's MacOS plugin
 
 + features:
 
+- if caps lock is pressed during startup, show dialog box for changing
+  settings that are currently set on the CLI (settings directory,
+  flags such as -norestore, background mode)
+- show 'this was shown cos caps lock down', blah blah so users don't
+  get confused.
+- I/O errors and plugin load errors batched together in one dialog box
+- plugin errors have 'Update Plugins' button
 - drop LatestVersion plugin
 - roll Firewall plugin into core
 - web start version
@@ -198,7 +211,6 @@ TO DO
 - JDK 1.3: about box broken
 - find next with $ or ^
 - Shift+TAB on Java 1.1
-- find btn no work
 - custom stylesheet: no xmlns
 - eval-for-selected-lines doesn't work with rectangular selection
 - how to handle S+0-9?
@@ -212,7 +224,6 @@ TO DO
 - a line consisting entirely of spaces & word wrap
 - switching option panes real fast
 - fix '... is not a function name' when running openjade
-- vfs browser: >1 request error when clicking 'up'?
 - tabbing to text area fails
 - zlib decompression errors in plugin manager
 - failed saves should not clear the dirty flag
